更新首页样式

--- a/app.json
+++ b/app.json
@@ -1,32 +1,35 @@
 {
   "pages": [
-    "pages/personal/personal",
     "pages/index/index",
+    "pages/personal/personal",
     "pages/message/message",
-    "pages/info/info"
+    "pages/info/info",
+    "pages/chat/chat"
   ],
   "tabBar": {
     "color": "#666",
     "selectedColor": "#087383",
     "backgroundColor": "#fff",
-    "list": [{
-      "pagePath": "pages/index/index",
-      "text": "首页",
-      "iconPath": "static/images/tabs/home.png",
-      "selectedIconPath": "static/images/tabs/home-fill.png"
-    },
-    {
-      "pagePath": "pages/message/message",
-      "text": "消息",
-      "iconPath": "static/images/tabs/message.png",
-      "selectedIconPath": "static/images/tabs/message-fill.png"
-    },
-    {
-      "pagePath": "pages/personal/personal",
-      "text": "我的",
-      "iconPath": "static/images/tabs/user.png",
-      "selectedIconPath": "static/images/tabs/user-fill.png"
-    }]
+    "list": [
+      {
+        "pagePath": "pages/index/index",
+        "text": "首页",
+        "iconPath": "static/images/tabs/home.png",
+        "selectedIconPath": "static/images/tabs/home-fill.png"
+      },
+      {
+        "pagePath": "pages/message/message",
+        "text": "消息",
+        "iconPath": "static/images/tabs/message.png",
+        "selectedIconPath": "static/images/tabs/message-fill.png"
+      },
+      {
+        "pagePath": "pages/personal/personal",
+        "text": "我的",
+        "iconPath": "static/images/tabs/user.png",
+        "selectedIconPath": "static/images/tabs/user-fill.png"
+      }
+    ]
   },
   "window": {
     "backgroundTextStyle": "light",
